--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>Vblae</title>
 	<link rel="shortcut icon" type="icon" href="./res/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="./style/index.css">
