fix logo drawing

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="js/dropdown.js"></script>
 
   </head>
-  <body>
+  <body onLoad="_logo()">
   	<canvas id="canvas"></canvas>
 		<div class="nav-bar">
 		  <div class="dropdown">
