--- a/bullets.html
+++ b/bullets.html
@@ -14,7 +14,7 @@
 
   </head>
 
-  <body onLoad="start()">
+  <body onLoad="_logo(); start()">
     <canvas id="canvas"></canvas>
     <div class="nav-bar">
       <div class="dropdown">
