--- a/rockets.html
+++ b/rockets.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="js/rockets.js"></script>
   </head>
 
-  <body onLoad="start()">
+  <body onLoad="_logo(); start()">
     <canvas id="canvas"></canvas>
     <div class="nav-bar">
       <div class="dropdown">
