--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/logo.js"></script>
     <script type="text/javascript" src="js/dropdown.js"></script>
   </head>
-  <body>
+  <body onLoad="_logo()">
 		<canvas id="canvas"></canvas>
 			<div class="nav-bar">
 	      <div class="dropdown">
